<resources>
    <string name="app_name">ProjecteAndroid</string>
    <string name="portada">portada</string>
    <string name="BTMLOGIN">Login</string>
    <string name="BTMREGISTRO">Registre</string>
    <string name="correoEt">E-mail</string>
    <string name="nombreEt">Nom</string>
    <string name="passEt">Password</string>
    <string name="edatEt">Edat</string>
    <string name="poblacioEt">Població</string>
    <string name="fechaTxt">Data</string>
    <string name="Registrar">REGISTRAR</string>
    <string name="correoLogin">E-mail</string>
    <string name="passLogin">Password</string>
    <string name="BtnLogin">ENTRAR</string>
    <string name="tancarSessio">TANCAR SESSIÓ</string>
    <string name="miPuntuaciotxt">PUNTUACIÓ</string>
    <string name="puntuacio"> -- </string>
    <string name="uid"> -- </string>
    <string name="correo"> -- </string>
    <string name="nom"> -- </string>
    <string name="MenuTxt">MENÚ</string>
    <string name="jugarBtn">JUGAR</string>
    <string name="puntuacionsBtn">PUNTUACIONS</string>
    <string name="creditsBtn">CRÈDITS</string>
    <string name="reiniciar_partida">Reiniciar Partida</string>
    <string name="tornar_menu">Tornar al Menú</string>
    <string name="x_text">X</string>
    <string name="o_text">O</string>
    <string name="has_guanyat">Has guanyat!</string>
    <string name="guanya_maquina">Ha guanyat la Màquina!</string>
    <string name="empat">Empat!</string>
    <string name="canviarImatgeBtn">CANVIAR IMATGE</string>
    <string name="edat_text">Edat</string>
    <string name="poblacio_text">Població</string>
</resources>