<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F4C5C"
    android:fillViewport="true"
    tools:context=".Menu">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical"
      android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/miPuntuaciotxt"
        android:text="@string/miPuntuaciotxt"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/puntuacio"
        android:text="@string/puntuacio"
        android:textColor="#FFFFFF"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:id="@+id/alienimagen"
        android:src="@drawable/gato" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/uid"
        android:text="@string/uid"
        android:textColor="#FFFFFF"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/correo"
        android:text="@string/correo"
        android:textColor="#FFFFFF"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nom"
        android:text="@string/nom"
        android:textColor="#FFFFFF"
        android:gravity="center"/>

    <Button
        android:id="@+id/jugarBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jugarBtn"
        android:textColor="#FFFFFF"
        app:backgroundTint="#FF7B54"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/PuntuacionsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/puntuacionsBtn"
        android:textColor="#FFFFFF"
        app:backgroundTint="#FF7B54"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/CreditsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creditsBtn"
        android:textColor="#FFFFFF"
        app:backgroundTint="#FF7B54"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/tancarSessio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tancarSessio"
        android:textColor="#FFFFFF"
        app:backgroundTint="#FF7B54"
        android:layout_marginTop="10dp"
        />

  </LinearLayout>
</ScrollView>