<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F4C5C"
    tools:context=".Registro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">

        <!-- ENTREM EL MAIL -->
        <EditText
            android:id="@+id/correoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="#FFFFFF"
            android:textColorHint="#CCCCCC"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/correoEt" />

        <!-- ENTREM EL PASSWORD -->
        <EditText
            android:id="@+id/passEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#CCCCCC"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/passEt" />

        <!-- ENTREM EL NOM DEL JUGADOR -->
        <EditText
            android:id="@+id/nombreEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:textColorHint="#CCCCCC"
            android:backgroundTint="#FFFFFF"
            android:hint="@string/nombreEt" />

        <!-- DATA ACTUAL -->
        <TextView
            android:id="@+id/fechaEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/fechaTxt"
            android:textColor="#FFFFFF"
            android:textColorHint="#CCCCCC"
            android:textSize="20sp"
            android:layout_marginTop="10dp" />

        <!-- BOTO DE ENTRAR -->
        <Button
            android:id="@+id/registrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Registrar"
            android:textColor="#FFFFFF"
            app:backgroundTint="#FF7B54"
            android:layout_marginTop="10dp" />

    </LinearLayout>
</RelativeLayout>